@@ -8,6 +8,7 @@
            type="text/javascript"></script>
 
    <link rel="stylesheet" href="default.css">
+   <link rel="stylesheet" href="custom.css" id="custom">
 </head>
 
 <body id="top">
