@@ -2,7 +2,7 @@ body {font-size: 10pt}
 
 div.status { line-height: 1.4; 
              word-wrap: break-word; }
-span.datetime { color: #606060 }
+.datetime { color: #606060 }
 
 a { text-decoration: none; }
 a:hover { text-decoration: underline; }
