@@ -1,0 +1,5 @@
+div.status { padding-bottom: 10px;
+             margin-bottom: 10px;
+             border-bottom: 1px solid #ccc; }
+div.icon { float: left; width: 60px; }
+div.text { margin-left: 60px; }
