@@ -1,0 +1,17 @@
+<div class='status'>
+  <div class='icon'>
+    <a href='gfeedline://twitter.com/$user_name/status/$id'
+       style='color: #$user_color;' class='username'>
+      <img src='$image_uri' width='48' height='48'></a>
+  </div>
+
+  <div class='text'>
+    <div><a href='gfeedline://twitter.com/$user_name/status/$id'
+            style='color: #$user_color;' class='username'>$user_name</a>
+    $retweet
+    </div>
+    <div>$status_body</div>
+    <div class='datetime'>($datetime)</div>
+
+  </div>
+</div>
